Fix title text alignment

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -28,7 +28,6 @@ body {
 
 .header-title {
   color: white;
-  padding-top: 2rem;
 }
 
 /* Minimum size for NOAA logo must be 72px (0.75 in) */
